--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,42 @@
+# =========================
 # Node modules
+# =========================
 node_modules/
+frontend/node_modules/
+backend/node_modules/
 
+# =========================
 # Environment variables
+# =========================
 .env
 .env.local
 .env.development
 .env.production
 .env.test
+frontend/.env
+backend/.env
 
-# OS files
+# =========================
+# OS files and logs
+# =========================
 .DS_Store
 *.log
 
-# Optional frontend build folders
+# =========================
+# Frontend build folders
+# =========================
 frontend/.next/
 frontend/build/
 frontend/dist/
 
-# Optional backend build folders
+# =========================
+# Backend build folders
+# =========================
 backend/dist/
+backend/build/
+
+# =========================
+# Misc
+# =========================
+*.sqlite
+*.sqlite3
